--- a/package.json
+++ b/package.json
@@ -15,8 +15,12 @@
     "@babel/preset-typescript": "^7.14.5",
     "@types/react": "^17.0.14",
     "@types/react-dom": "^17.0.9",
+    "html-webpack-plugin": "^5.3.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "typescript": "^4.3.5"
+    "typescript": "^4.3.5",
+    "webpack": "^5.45.1",
+    "webpack-cli": "^4.7.2",
+    "webpack-dev-server": "^3.11.2"
   }
 }
