--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@babel/preset-typescript": "^7.14.5",
     "@types/react": "^17.0.14",
     "@types/react-dom": "^17.0.9",
+    "babel-loader": "^8.2.2",
     "html-webpack-plugin": "^5.3.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
@@ -23,5 +24,9 @@
     "webpack": "^5.45.1",
     "webpack-cli": "^4.7.2",
     "webpack-dev-server": "^3.11.2"
+  },
+  "devDependencies": {
+    "@pmmmwh/react-refresh-webpack-plugin": "^0.4.3",
+    "react-refresh": "^0.9.0"
   }
 }
